--- a/working.ipynb
+++ b/working.ipynb
@@ -123,76 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my_experiment\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.8/dist-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " Class : leather\n",
-      "Loaded pretrained weights for efficientnet-b5\n",
-      "\n",
-      " Class : zipper\n",
-      "Loaded pretrained weights for efficientnet-b5\n",
-      "\n",
-      " Class : metal_nut\n",
-      "Loaded pretrained weights for efficientnet-b5\n",
-      "\n",
-      " Class : wood\n",
-      "Loaded pretrained weights for efficientnet-b5\n",
-      "\n",
-      " Class : pill\n",
-      "Loaded pretrained weights for efficientnet-b5\n",
-      "\n",
-      " Class : transistor\n",
-      "Loaded pretrained weights for efficientnet-b5\n",
-      "\n",
-      " Class : grid\n",
-      "Loaded pretrained weights for efficientnet-b5\n",
-      "\n",
-      " Class : tile\n",
-      "Loaded pretrained weights for efficientnet-b5\n",
-      "\n",
-      " Class : capsule\n",
-      "Loaded pretrained weights for efficientnet-b5\n",
-      "\n",
-      " Class : hazelnut\n",
-      "Loaded pretrained weights for efficientnet-b5\n",
-      "\n",
-      " Class : toothbrush\n",
-      "Loaded pretrained weights for efficientnet-b5\n",
-      "\n",
-      " Class : screw\n",
-      "Loaded pretrained weights for efficientnet-b5\n",
-      "\n",
-      " Class : carpet\n",
-      "Loaded pretrained weights for efficientnet-b5\n",
-      "\n",
-      " Class : bottle\n",
-      "Loaded pretrained weights for efficientnet-b5\n",
-      "\n",
-      " Class : cable\n",
-      "Loaded pretrained weights for efficientnet-b5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import config as c \n",
     "from src.data import CombiDataset,make_loader,downsampling\n",
@@ -232,99 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'leather': {'max': 1.0, 'mean': 1.0},\n",
-       " 'zipper': {'max': 0.9774159663865547, 'mean': 0.9908088235294118},\n",
-       " 'metal_nut': {'max': 0.998533724340176, 'mean': 0.9902248289345064},\n",
-       " 'wood': {'max': 0.9271929824561403, 'mean': 0.7956140350877193},\n",
-       " 'pill': {'max': 0.70949263502455, 'mean': 0.8876159301691215},\n",
-       " 'transistor': {'max': 0.44166666666666665, 'mean': 0.6449999999999999},\n",
-       " 'grid': {'max': 0.6516290726817043, 'mean': 0.4862155388471178},\n",
-       " 'tile': {'max': 0.7763347763347763, 'mean': 0.9318181818181819},\n",
-       " 'capsule': {'max': 0.5053849222177902, 'mean': 0.4148384523334663},\n",
-       " 'hazelnut': {'max': 0.73, 'mean': 0.91},\n",
-       " 'toothbrush': {'max': 0.675, 'mean': 0.8833333333333333},\n",
-       " 'screw': {'max': 0.477146956343513, 'mean': 0.7511785201885632},\n",
-       " 'carpet': {'max': 0.9414125200642054, 'mean': 0.7608346709470305},\n",
-       " 'bottle': {'max': 0.5547619047619048, 'mean': 0.6428571428571428},\n",
-       " 'cable': {'max': 0.9190404797601199, 'mean': 0.9891304347826086}}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'leather': {'max': 1.0, 'mean': 1.0},\n",
-       " 'zipper': {'max': 0.9774159663865547, 'mean': 0.9908088235294118},\n",
-       " 'metal_nut': {'max': 0.9956011730205279, 'mean': 0.989247311827957},\n",
-       " 'wood': {'max': 0.9921052631578947, 'mean': 0.987719298245614},\n",
-       " 'pill': {'max': 0.9639934533551554, 'mean': 0.9923622476813967},\n",
-       " 'transistor': {'max': 0.9870833333333333, 'mean': 0.9895833333333334},\n",
-       " 'grid': {'max': 0.9991645781119465, 'mean': 0.9899749373433584},\n",
-       " 'tile': {'max': 0.996031746031746, 'mean': 0.9992784992784993},\n",
-       " 'capsule': {'max': 0.9712804148384523, 'mean': 0.9924212205823694},\n",
-       " 'hazelnut': {'max': 0.9971428571428572, 'mean': 0.9982142857142857},\n",
-       " 'toothbrush': {'max': 0.8638888888888889, 'mean': 0.9611111111111111},\n",
-       " 'screw': {'max': 0.9442508710801394, 'mean': 0.9928263988522238},\n",
-       " 'carpet': {'max': 0.9719101123595505, 'mean': 0.9723113964686999},\n",
-       " 'bottle': {'max': 0.9944444444444445, 'mean': 0.9976190476190476},\n",
-       " 'cable': {'max': 0.9390929535232384, 'mean': 0.9917541229385307}}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "97.28937370449819\n",
-      "98.96821356350557\n"
-     ]
-    }
-   ],
-   "source": [
-    "mean_value = [] \n",
-    "max_value = [] \n",
-    "for i in score.keys():\n",
-    "    mean_value.append(score[i]['mean'])\n",
-    "    max_value.append(score[i]['max'])\n",
-    "print(np.mean(max_value)*100)\n",
-    "print(np.mean(mean_value)*100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -428,6 +269,11 @@
        "      <td>0.991754</td>\n",
        "      <td>0.939093</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AVerage</th>\n",
+       "      <td>0.989682</td>\n",
+       "      <td>0.972894</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -448,18 +294,26 @@
        "screw       0.992826  0.944251\n",
        "carpet      0.972311  0.971910\n",
        "bottle      0.997619  0.994444\n",
-       "cable       0.991754  0.939093"
+       "cable       0.991754  0.939093\n",
+       "AVerage     0.989682  0.972894"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "mean_value = [] \n",
+    "max_value = [] \n",
+    "for i in score.keys():\n",
+    "    mean_value.append(score[i]['mean'])\n",
+    "    max_value.append(score[i]['max'])\n",
+    "\n",
     "df = pd.DataFrame([mean_value,max_value]).T\n",
     "df.columns = ['mean','max']\n",
     "df.index = score.keys()\n",
+    "df.loc['AVerage'] = np.mean(df).values\n",
     "df"
    ]
   }
