--- a/working.ipynb
+++ b/working.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Init "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -40,65 +32,7 @@
     "import os \n",
     "import pandas as pd \n",
     "import torch.nn.functional as F \n",
-    "\n",
-    "dataset_dir = c.dataset_dir\n",
-    "class_name = 'bottle'\n",
-    "mode = 'feature'\n",
-    "train = 'train'"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Train Teacher "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from train_teacher import train as train_teacher \n",
-    "all_classes = [d for d in os.listdir(c.dataset_dir) if os.path.isdir(os.path.join(c.dataset_dir, d))]\n",
-    "all_classes.remove('.ipynb_checkpoints')\n",
-    "all_classes.remove('split_csv')\n",
-    "for class_name in all_classes:\n",
-    "    print(f'\\n Class : {class_name}')\n",
-    "    save_dir = os.path.join('./saved_models',dataset_dir.split('/')[-1],class_name)\n",
-    "    \n",
-    "    trainset = CombiDataset(dataset_dir,class_name,mode,train,device=c.device)\n",
-    "    trainloader = make_loader(trainset,shuffle=True)\n",
-    "    \n",
-    "    teacher = Model().to(c.device)\n",
-    "    train_teacher(teacher,trainloader,save_dir)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Train Student "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from train_student import train as train_student\n",
-    "all_classes = [d for d in os.listdir(c.dataset_dir) if os.path.isdir(os.path.join(c.dataset_dir, d))]\n",
-    "all_classes.remove('.ipynb_checkpoints')\n",
-    "all_classes.remove('split_csv')\n",
-    "for class_name in all_classes:\n",
-    "    print(f'\\t Class : {class_name}')\n",
-    "    save_dir = os.path.join('./saved_models',dataset_dir.split('/')[-1],class_name) \n",
-    "    teacher = torch.load(f'./saved_models/MVtecAD/{class_name}/teacher_best.pt').to(c.device)\n",
-    "    student = Model(nf=not c.asymmetric_student, channels_hidden=c.channels_hidden_student, n_blocks=c.n_st_blocks).to(c.device)\n",
-    "    train_student(teacher,student,trainloader,save_dir)"
+    "\n"
    ]
   },
   {
@@ -110,17 +44,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Class : foam\n",
+      "Loaded pretrained weights for efficientnet-b5\n",
+      "\n",
+      " Class : tire\n",
+      "Loaded pretrained weights for efficientnet-b5\n",
+      "\n",
+      " Class : peach\n",
+      "Loaded pretrained weights for efficientnet-b5\n",
+      "\n",
+      " Class : cable_gland\n",
+      "Loaded pretrained weights for efficientnet-b5\n",
+      "\n",
+      " Class : carrot\n",
+      "Loaded pretrained weights for efficientnet-b5\n",
+      "\n",
+      " Class : rope\n",
+      "Loaded pretrained weights for efficientnet-b5\n",
+      "\n",
+      " Class : potato\n",
+      "Loaded pretrained weights for efficientnet-b5\n",
+      "\n",
+      " Class : cookie\n",
+      "Loaded pretrained weights for efficientnet-b5\n",
+      "\n",
+      " Class : bagel\n",
+      "Loaded pretrained weights for efficientnet-b5\n",
+      "\n",
+      " Class : dowel\n",
+      "Loaded pretrained weights for efficientnet-b5\n"
+     ]
+    }
+   ],
    "source": [
     "from eval import eval \n",
     "score = {} \n",
     "all_classes = [d for d in os.listdir(c.dataset_dir) if os.path.isdir(os.path.join(c.dataset_dir, d))]\n",
-    "all_classes.remove('.ipynb_checkpoints')\n",
-    "all_classes.remove('split_csv')\n",
     "\n",
+    "dataset_dir = c.dataset_dir\n",
+    "mode = c.data_mode\n",
     "for class_name in all_classes:\n",
+    "#for class_name in ['grid']:\n",
     "    print(f'\\n Class : {class_name}')\n",
     "    save_dir = os.path.join('./saved_models',dataset_dir.split('/')[-1],class_name)\n",
     "\n",
@@ -128,13 +100,61 @@
     "    testset = CombiDataset(dataset_dir,class_name,mode,'test',device=c.device)\n",
     "    testloader = make_loader(testset)\n",
     "\n",
-    "    teacher = torch.load(f'./saved_models/MVtecAD/{class_name}/teacher_best.pt')\n",
-    "    student = torch.load(f'./saved_models/MVtecAD/{class_name}/student_best.pt')\n",
+    "    teacher = torch.load(f'{save_dir}/teacher_best.pt')\n",
+    "    student = torch.load(f'{save_dir}/student_best.pt')\n",
     "\n",
     "    mean_img_auc,max_img_auc = eval(teacher,student,testloader)\n",
     "    score[class_name] = {'max' : max_img_auc,'mean' : mean_img_auc}\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/numpy/core/fromnumeric.py:3472: FutureWarning: In a future version, DataFrame.mean(axis=None) will return a scalar mean over the entire DataFrame. To retain the old behavior, use 'frame.mean(axis=0)' or just 'frame.mean()'\n",
+      "  return mean(axis=axis, dtype=dtype, out=out, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_value = [] \n",
+    "max_value = [] \n",
+    "for i in score.keys():\n",
+    "    mean_value.append(score[i]['mean'])\n",
+    "    max_value.append(score[i]['max'])\n",
+    "\n",
+    "df = pd.DataFrame([mean_value,max_value]).T\n",
+    "df.columns = ['mean','max']\n",
+    "df.index = score.keys()\n",
+    "df.loc['AVerage'] = np.mean(df).values\n",
+    "df.to_csv('./result.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Volume/VAD/AST_3d'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
    ]
   }
  ],
